# sentiment-lora

./: Cargo.toml  README.md  classifier.safetensors
data/: sentiment.csv
src/: data.rs  lora.rs  main.rs  model.rs  train.rs
