[package]
name = "sentiment-lora"
version = "0.1.0"
edition = "2021"

[dependencies]
# The core candle trio — always used together
candle-core = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }

# Text → token IDs
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Downloads weights/configs from Hugging Face
hf-hub = { version = "0.3", features = ["tokio"] }

# Async runtime (hf-hub needs it)
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# JSON parsing for model configs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Reading our training CSV
csv = "1.3"

# Reading SST-2 parquet files from Hugging Face
parquet = "53"

[profile.release]
opt-level = 3
